...
              iconName = faMapPin
            
            return <FontAwesomeIcon icon={iconName} color={"#1E90FF"} size={14}/>
          }
        })}
      >
        <Tab.Screen name="Home" component={Home} options={{tabBarTestID: "HomePage"}} />
        <Tab.Screen name="Profile" component={Profile} options={{tabBarTestID: "ProfilePage"}} />
        <Tab.Screen name="Saved Places" component={SavedPlaces} options={{tabBarTestID: "SavedPlacesPage"}} />
      </Tab.Navigator>
    );
  }

  return (
...
